@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0
hide empty members
title Class Diagram - UC-02 Search/Filter Products

class "Product UI" as UI <<boundary>>
class "ShoesController / ReviewsController" as Controller <<controller>>
class "ShoesService / ReviewsService" as Service <<service>>
class "Shoe" as Shoe <<domain>>
class "ShoeDetail" as ShoeDetail <<domain>>
class "Review" as Review <<domain>>

UI --> Controller : GET /shoes?category=&color=&price=
Controller --> Service : delegates
Service --> Shoe : uses
Service --> ShoeDetail : uses
Service --> Review : uses

note right of UI
UC-02 - Search/Filter Products
Actors: Guest, User, Manager, Admin
Pre: Đang ở trang product listing
Post: Danh sách sản phẩm được lọc
end note
@enduml
